--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,7 +4,7 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
-server.publicBaseUrl: kibana.${DOMAIN_NAME:example.com}
+server.publicBaseUrl: https://kibana.${DOMAIN_NAME:example.com}
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
 
