--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -14,7 +14,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "${ELASTIC_PASSWORD:changeme}"
+		password => "${ELASTIC_PASSWORD:-changeme}"
 		ecs_compatibility => disabled
 	}
 }
