--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -25,6 +25,10 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 500M
 
   logstash:
     image: docker.elastic.co/logstash/logstash:7.17.0
@@ -45,6 +49,10 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 500M
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.0
@@ -64,9 +72,13 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-    labels:
-      caddy: kibana.yoman.online
-      caddy.reverse_proxy: '{{upstreams 5601}}'
+      labels:
+        caddy: kibana.yoman.online
+        caddy.reverse_proxy: '{{upstreams 5601}}'
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 500M
 
 configs:
   elastic_config:
