--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,11 +4,11 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
-server.publicBaseUrl: https://kibana.${DOMAIN_NAME:example.com}
+# server.publicBaseUrl: https://kibana.${DOMAIN_NAME:example.com}
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 monitoring.ui.container.elasticsearch.enabled: true
 
 ## X-Pack security credentials
 #
 elasticsearch.username: elastic
-elasticsearch.password: ${ELASTIC_PASSWORD:changeme}
+# elasticsearch.password: ${ELASTIC_PASSWORD:changeme}
