--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -26,10 +26,10 @@ services:
     deploy:
       mode: replicated
       replicas: 1
-      resources:
-        limits:
-          cpus: '0.3'
-          memory: 500M
+      # resources:
+      #   limits:
+      #     cpus: '0.3'
+      #     memory: 500M
 
   logstash:
     image: docker.elastic.co/logstash/logstash:7.17.0
