--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -74,10 +74,10 @@ services:
       labels:
         caddy: kibana.yoman.online
         caddy.reverse_proxy: '{{upstreams 5601}}'
-      resources:
-        limits:
-          cpus: '0.3'
-          memory: 500M
+      # resources:
+      #   limits:
+      #     cpus: '0.3'
+      #     memory: 500M
 
 configs:
   elastic_config2:
