--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ services:
     #   - "9200:9200"
     #   - "9300:9300"
     configs:
-      - source: elastic_config2
+      - source: elastic_config
         target: /usr/share/elasticsearch/config/elasticsearch.yml
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data:Z
@@ -80,7 +80,7 @@ services:
       #     memory: 500M
 
 configs:
-  elastic_config2:
+  elastic_config:
     file: ./elasticsearch/config/elasticsearch.yml
   logstash_config3:
     file: ./logstash/config/logstash.yml
