--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -26,6 +26,9 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      placement:
+        constraints:
+            - node.labels.elk == true
       # resources:
       #   limits:
       #     cpus: '0.3'
@@ -51,6 +54,9 @@ services:
   #   deploy:
   #     mode: replicated
   #     replicas: 1
+  #     placement:
+  #       constraints:
+  #           - node.labels.elk == true
   #     resources:
   #       limits:
   #         cpus: '0.3'
@@ -74,6 +80,9 @@ services:
       labels:
         caddy: kibana.yoman.online
         caddy.reverse_proxy: '{{upstreams 5601}}'
+      placement:
+        constraints:
+            - node.labels.elk == true
       # resources:
       #   limits:
       #     cpus: '0.3'
