--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -15,7 +15,7 @@ services:
     env_file:
       - .env
     environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+      # ES_JAVA_OPTS: "-Xmx256m -Xms256m"
       # Use single node discovery in order to disable production mode and avoid bootstrap checks.
       # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
