update elastic search config

--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -11,3 +11,10 @@ network.host: 0.0.0.0
 xpack.license.self_generated.type: trial
 xpack.security.enabled: true
 xpack.monitoring.collection.enabled: true
+
+# single node mode
+index.number_of_shards: 1
+index.number_of_replicas: 0
+
+# memory limit
+bootstrap.memory_lock: true
