--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -8,7 +8,7 @@ services:
     #   - "9200:9200"
     #   - "9300:9300"
     configs:
-      - source: elastic_config3
+      - source: elastic_config4
         target: /usr/share/elasticsearch/config/elasticsearch.yml
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data:Z
@@ -21,6 +21,8 @@ services:
       discovery.type: single-node
       # Force publishing on the 'elk' overlay.
       network.publish_host: _eth0_
+      index.number_of_shards: 1
+      index.number_of_replicas: 0
     networks:
       - elk
     deploy:
@@ -89,7 +91,7 @@ services:
       #     memory: 500M
 
 configs:
-  elastic_config3:
+  elastic_config4:
     file: ./elasticsearch/config/elasticsearch.yml
   logstash_config3:
     file: ./logstash/config/logstash.yml
